# coreai-onnx

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  llms.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  op_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish.yml
docs/: cli.md  conf.py  coverage.md  custom-lowerings.md  index.md  mcp.md  quickstart.md  repair.md
skills/onnx-to-coreai/: SKILL.md
src/coreai_onnx/: __init__.py  __version__.py  _cli.py  _convert.py  _coverage.py  _ir.py  _mcp.py  _service.py  _type_mapping.py  _utils.py  _verify.py  _verify_worker.py  converter.py  errors.py
src/coreai_onnx/_fusion/: __init__.py  _activations.py  _attention.py  _index.py  _rewrite.py
src/coreai_onnx/_lowerings/: __init__.py  _activations.py  _attention.py  _common.py  _controlflow.py  _conv.py  _elementwise.py  _indexing.py  _matmul.py  _norm.py  _quantization.py  _recurrent.py  _reduce.py  _shape.py
src/coreai_onnx/_passes/: __init__.py  _cleanup.py  _fold.py  _model.py
src/coreai_onnx/_repair/: __init__.py  _strategies.py
tests/: helpers.py  test_cli.py  test_cli_json.py  test_convert_api.py  test_converter.py  test_coverage.py  test_discoverability.py  test_e2e.py  test_fuse_activations.py  test_fuse_attention.py  test_ir.py  test_mcp.py  test_ops_controlflow.py  test_ops_conv.py  test_ops_elementwise.py  test_ops_gather.py  test_ops_lstm.py  test_ops_matmul.py  test_ops_norm.py  test_ops_quantization.py  test_ops_reduce.py  test_ops_shape.py  test_ops_unary.py  test_package.py  test_precision_policy.py  test_preprocess.py  test_repair.py  test_service.py  test_type_mapping.py  test_verify.py  test_verify_worker.py
tools/: gen_coverage_table.py
