[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coreai-onnx"
version = "1.1.1"
description = "Convert ONNX models to Apple Core AI (.aimodel) — the AI-first successor to Core ML on iOS 27. Validated, precision-checked, agent-friendly, with automatic float16 repair and an MCP server."
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [{ name = "devin-lai", email = "markauto75@gmail.com" }]
keywords = [
    "onnx", "core-ai", "coreai", "aimodel", "apple", "core-ml",
    "model-conversion", "machine-learning", "ios", "ios-27", "macos",
    "neural-engine", "apple-silicon", "on-device", "inference",
    "mcp", "ai-agents",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
requires-python = ">=3.11,<3.14"
dependencies = [
    # Floor = the version this release is validated against in the local
    # macOS 27 + Xcode 27 beta release environment.
    "coreai-core>=1.0.0b1,<2",
    # 1.21 is the floor that carries the external-data path-traversal hardening
    # (canonical-containment + symlink + O_NOFOLLOW checks); the converter loads
    # caller-supplied models, including via the MCP server, so this matters.
    "onnx>=1.21",
    # Match ONNX's floor and keep the next major for an explicit validation pass.
    "numpy>=1.23.2,<3",
    "rich>=13.0,<16.0",
]

[project.optional-dependencies]
verify = ["onnxruntime"]
# anyio is imported directly by _mcp.py; declare it rather than relying on
# the MCP SDK's transitive dependency.
mcp = ["mcp>=1.2", "anyio>=4.0"]
test = [
    "onnxruntime",
    "mcp>=1.2",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-xdist",
    "torch",
]
docs = ["sphinx>=7.0", "shibuya", "myst-parser"]
dev = [
    "build>=1.0",
    "twine>=5.0",
    "ruff>=0.12.0",
    "pre-commit>=4.0",
    "mypy",
    "vulture>=2.14",
]

[project.scripts]
coreai-onnx = "coreai_onnx._cli:main"
coreai-onnx-mcp = "coreai_onnx._mcp:main"

[project.urls]
Homepage = "https://github.com/devin-lai/coreai-onnx"
Documentation = "https://devin-lai.github.io/coreai-onnx/"
Repository = "https://github.com/devin-lai/coreai-onnx"
Issues = "https://github.com/devin-lai/coreai-onnx/issues"
Changelog = "https://github.com/devin-lai/coreai-onnx/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["coreai_onnx*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
coreai_onnx = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = ["--tb=short", "-ra"]
markers = [
    "apple: Requires Apple Core AI / macOS 27 / Xcode 27 beta",
    "coreai: Exercises Core AI conversion/compiler/runtime behavior",
    "requires_macos27: Requires local macOS 27 / Xcode 27 beta",
    "integration: Integration tests that depend on local Apple SDK/runtime",
    "ops: core operator parity tests",
    "ir: MLIR-output tests (no Core AI runtime needed)",
    "slow: slow tests (deselect with '-m \"not slow\"')",
    "e2e: end-to-end model tests",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM", "C4", "PERF", "RET", "RUF", "PT"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["coreai_onnx"]

[tool.coverage.run]
branch = true
source = ["coreai_onnx"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
